--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,15 @@ environment:
 
 dependencies:
   bloc: ^8.1.0
-  firebase_core: ^1.21.1
   cloud_firestore: ^3.4.6
+  firebase_core: ^1.21.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   bloc_test: ^9.1.0
