--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   bloc: ^8.1.0
   cloud_firestore: ^3.4.6
+  connectivity_plus: ^2.3.6+1
   firebase_core: ^1.21.1
   flutter:
     sdk: flutter
