--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,24 +19,24 @@
       "name": "Launch staging",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main_staging.dart",
+      "program": "lib/main.dart",
       "args": [
         "--flavor",
         "staging",
         "--target",
-        "lib/main_staging.dart"
+        "lib/main.dart"
       ]
     },
     {
       "name": "Launch production",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main_production.dart",
+      "program": "lib/main.dart",
       "args": [
         "--flavor",
         "production",
         "--target",
-        "lib/main_production.dart"
+        "lib/main.dart"
       ]
     }
   ]
