--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ app.*.map.json
 !.idea/codeStyles/
 !.idea/dictionaries/
 !.idea/runConfigurations/
+lib/firebase_options/firebase_options_staging.dart
